--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,20 +5,10 @@
     <title>{{ page.title }}</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/g/normalize@3.0.0">
     <link rel="stylesheet" type="text/css" href="/css/webflow.css">
     <link rel="stylesheet" type="text/css" href="/css/gisto.css">
     <link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css">
-    <script src="/js/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
-    <script>
-        WebFont.load({
-            google: {
-                families: ["Open Sans:300,400,600,700,800"]
-            }
-        });
-    </script>
-    <script src="/js/main.js"></script>
 
     {% include ga.html%}
 
