--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,4 +1,4 @@
-<section>
+<section class="fsdfsdfdsf">
 
     <div class="under-nav">
         <h1>Snippets Made Awesome</h1>
@@ -9,15 +9,63 @@
                     <p>Gisto is a Cross-platform gist snippets management desktop application that allows you and your
                         team share code snippets fast and easily. Based on GitHub Gist Infrastructure which means you
                         can use all your existing snippets by connecting your GitHub account!</p>
-                    <a href="https://github.com/Gisto/Gisto" class="btn bg-grey txt-white"><i class="icon-github"></i></a>
-                    <a href="https://twitter.com/gistoapp" class="btn bg-grey twitter txt-white"><i class="icon-twitter"></i></a>
-                    <a href="#about" class="btn bg-grey txt-white innsite">Read more <i class="icon-arrow-right"></i></a>
+                    <a href="https://github.com/Gisto/Gisto" class="btn bg-grey txt-white"><i
+                            class="icon-github"></i></a>
+                    <a href="https://twitter.com/gistoapp" class="btn bg-grey twitter txt-white"><i
+                            class="icon-twitter"></i></a>
+                    <a href="#about" class="btn bg-grey txt-white innsite">Read more <i
+                            class="icon-arrow-right"></i></a>
                 </div>
-                <div class="w-col w-col-6 w-clearfix" id="ytplayerdiv">
-
-                </div>
+                <a class="w-col w-col-6 w-clearfix video-run">
+<i class="icon-facetime-video"></i>
+                </a>
             </div>
         </div>
+
+        <section class="boxes">
+            <div class="w-container">
+                <div class="w-row">
+                    <a href="/features/" class="w-col w-col-4 w-clearfix box bg-grey txt-white uppercase">
+                        <i class="icon-fire-extinguisher icon-4x pull-left"></i>
+
+                        <h3>Features</h3>
+                <span>
+                    <i>List of features and additions</i> <i class="icon-chevron-right"></i>
+                </span>
+                    </a>
+                    <a href="#about" class="w-col w-col-4 w-clearfix box bg-greyer txt-white uppercase innsite">
+                        <i class="icon-laptop icon-4x pull-left"></i>
+
+                        <h3>Multi-platform</h3>
+                <span>
+                    <i>Available on Windows, Linux and OSX</i> <i class="icon-chevron-right"></i>
+                </span>
+                    </a>
+                    <a href="#download" class="w-col w-col-4 w-clearfix box bg-tomato txt-white uppercase innsite">
+                        <i class="icon-download-alt icon-4x pull-left"></i>
+
+                        <h3>Download</h3>
+                <span>
+                    <i>Downloads, mirrors and prev. versions</i> <i class="icon-chevron-right"></i>
+                </span>
+                    </a>
+                </div>
+            </div>
+        </section>
+
+
+        <h1>Features</h1>
+
+
+    </div>
+
+    <div class="hero-video">
+        <a class="close-video"><i class="icon-remove"></i></a>
+        <video id="movie" preload>
+            <source src="/video/gisto.webm" type="video/webm; codecs=vp8,vorbis" />
+            <source src="/video/gisto.ogv" type="video/ogg; codecs=theora,vorbis" />
+            <source src="/video/gisto.mp4" />
+        </video>
     </div>
 
 </section>
