--- a/css/gisto.scss
+++ b/css/gisto.scss
@@ -1,3 +1,5 @@
+$gisto-color-red: tomato;
+
 @media screen and (max-width: 479px) {
   .w-col {
     text-align: center;
@@ -66,12 +68,24 @@
 }
 
 @media screen and (max-width: 991px) {
+  .under-nav p {
+    font-size: 15px !important;
+  }
+}
 
+@font-face {
+  font-family: 'flexo';
+  src: url('../font/Flexo-CapsDEMO-webfont.eot');
+  src: url('../font/Flexo-CapsDEMO-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../font/Flexo-CapsDEMO-webfont.woff') format('woff'),
+  url('../font/Flexo-CapsDEMO-webfont.ttf') format('truetype'),
+  url('../font/Flexo-CapsDEMO-webfont.svg#FertigoProRegular') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 
 html {
-  //background: url(../images/sky.jpg) no-repeat center center fixed #f2f2f2;
-  background: url('../images/orig2.jpg') no-repeat center center fixed #f2f2f2; /* http://xishan1.deviantart.com */
+  background: url('../images/sky.jpg') no-repeat center center fixed #f2f2f2;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -89,6 +103,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   color: #333;
   font-size: 12px;
+  background: transparent;
   margin-top: 0;
   line-height: 25px;
 }
@@ -109,7 +124,7 @@ p {
 }
 
 .bg-tomato {
-  background: tomato;
+  background: $gisto-color-red;
 }
 
 .bg-grey {
@@ -129,9 +144,12 @@ p {
   font-weight: 700;
 }
 
+h1,h2,h3,h4,h5,h6 {
+  font-family: 'flexo','Open Sans', sans-serif;
+}
+
 h1 {
   margin: 30px 0px;
-  font-family: 'Open Sans', sans-serif;
   font-size: 38px;
   line-height: 44px;
   font-weight: 100;
@@ -177,7 +195,7 @@ h6 {
 .button, .btn {
   display: inline-block;
   padding: 4px 15px;
-  background-color: tomato;
+  background-color: $gisto-color-red;
   color: white;
   text-align: center;
   text-decoration: none;
@@ -189,7 +207,7 @@ button {
 }
 
 .bg-tomato {
-  background: tomato;
+  background: $gisto-color-red;
 }
 
 .bg-grey {
@@ -201,7 +219,7 @@ button {
 }
 
 nav {
-  margin: 30px auto;
+  margin: 0px auto 10px;
 }
 
 .nav-link {
@@ -211,13 +229,13 @@ nav {
   text-transform: uppercase;
   font-weight: 400;
   &:hover {
-    text-shadow: 1px 1px 1px #fff, 0px 1px 3px tomato;
-    color: tomato;
+    text-shadow: 1px 1px 1px #fff, 0px 1px 3px $gisto-color-red;
+    color: $gisto-color-red;
   }
 }
 
 .nav-link-download {
-  color: tomato;
+  color: $gisto-color-red;
 }
 
 .nav-column {
@@ -230,9 +248,50 @@ nav {
 
 .under-nav,
 .under-nav p {
-  padding: 10px 0px 10px 0px;
+  padding: 10px 0px 0px 0px;
   font: normal 19px/28px 'open sans';
 
+}
+
+.hero-video {
+  display:none;
+}
+
+.video-run {
+  display:block;
+  height: 214px;
+  background: url('../images/gisto.png');
+  background-size: 100%;
+  cursor: pointer;
+  box-shadow: 0px 2px 3px #555;
+  & i {
+    text-align: center;
+    display: none !important;
+    margin: 17% auto;
+    font-size: 62px;
+    border: 4px solid #555;
+    width: inherit;
+    padding: 15px;
+    border-radius: 10px;
+  }
+  &:hover i {
+    display: block !important;
+    opacity: 1;
+  }
+}
+
+.close-video {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 28px;
+  color: #fff;
+  background: tomato;
+  padding: 5px 10px;
+  opacity: 0.5;
+  &:hover {
+    opacity: 1;
+  }
 }
 
 header {
@@ -241,6 +300,8 @@ header {
   h1 {
     padding: 10px 0px;
     margin: 0;
+    font-family: 'open sans';
+    font-weight: 100;
   }
 }
 
@@ -262,9 +323,13 @@ header {
   }
   span {
     text-align: right;
-    display: inline-block;
+    display: table-cell;
+    line-height: 18px;
     width: 100%;
     padding: 0px 5px;
+    & i {
+      font-size: small;
+    }
   }
   h3 {
     margin-top: 0;
@@ -272,7 +337,7 @@ header {
 }
 
 .txt-red {
-  color: tomato;
+  color: $gisto-color-red;
 }
 
 .txt-grey {
@@ -371,8 +436,8 @@ ul {
       border-radius: 3px;
       padding: 5px 10px;
       &:hover {
-        background: tomato;
-        border: 1px solid tomato;
+        background: $gisto-color-red;
+        border: 1px solid $gisto-color-red;
         color: #fff;
       }
     }
@@ -409,7 +474,7 @@ ul {
 .icons-ul {
   margin-left: 0 !important;
   & i {
-    color: tomato;
+    color: $gisto-color-red;
   }
 }
 
@@ -478,7 +543,7 @@ pre {
 
 .main {
   & p a, ul a {
-    color:tomato;
+    color:$gisto-color-red;
     &:hover {
       color:skyblue;
     }
@@ -492,6 +557,19 @@ a.top {
   position: fixed;
   bottom: 10px;
   right: 0;
-  padding: 0px 5px 0px 10px;
+  padding: 10px 10px;
   border-radius: 50% 0 0 50%;
+  font-size: 20px;
+}
+
+.hero-video {
+  position: relative;
+}
+
+.hero-video video {
+  width:100%;
+}
+
+.features-boxes {
+  margin-top:0;
 }
