--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,11 +28,22 @@
         </div>
     </div>
 
-    <p class="txt-center">&copy; 2013 Gisto</p>
+    <p class="txt-center">&copy; 2014 Gisto</p>
 
 </footer>
 
 <a href="#top" class="top innsite"><i class="icon-arrow-up"></i></a>
+
+<script src="//cdn.jsdelivr.net/g/jquery@1.11,jquery.migrate@1.2.1"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
+<script>
+    WebFont.load({
+        google: {
+            families: ["Open Sans:300,400,600,700,800"]
+        }
+    });
+</script>
+<script src="/js/main.js"></script>
 
 </body>
 </html>
