--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="top">
 <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
@@ -13,7 +13,7 @@
     {% include ga.html%}
 
 </head>
-<body id="top" class="{% if page.name == 'home'%}home{% else %}inner{% endif %}">
+<body class="{% if page.name == 'home'%}home{% else %}inner{% endif %}">
 
 
 <header class="section header">
