--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -16,9 +16,16 @@
                     <a href="#about" class="btn bg-grey txt-white innsite">Read more <i
                             class="icon-arrow-right"></i></a>
                 </div>
-                <a class="w-col w-col-6 w-clearfix video-run">
-<i class="icon-facetime-video"></i>
-                </a>
+<!--
+<a class="w-col w-col-6 w-clearfix video-run">
+
+</a>
+-->
+                <div class="w-col w-col-6 w-clearfix video-run">
+                <img class="" src="../images/gisto.png" width="100%">
+                    <i class="icon-facetime-video"></i>
+                </div>
+
             </div>
         </div>
 
@@ -30,7 +37,7 @@
 
                         <h3>Features</h3>
                 <span>
-                    <i>List of features and additions</i> <i class="icon-chevron-right"></i>
+                    <i>List of features and new additions</i> <i class="icon-chevron-right"></i>
                 </span>
                     </a>
                     <a href="#about" class="w-col w-col-4 w-clearfix box bg-greyer txt-white uppercase innsite">
