--- a/css/gisto.css
+++ b/css/gisto.css
@@ -5,7 +5,7 @@
   font-weight: normal;
   font-style: normal; }
 
-html {
+html, body {
   background: url("../images/sky.jpg") no-repeat center center fixed #f2f2f2;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -417,6 +417,9 @@ a.top {
 
 /* Mediaqueries */
 @media screen and (max-width: 479px) {
+  html {
+    background: url("../images/sky_mob.jpg") no-repeat top center fixed #afbfd9; }
+
   .w-col {
     text-align: center; }
     .w-col p {
