Fix mobile, add some texts. Fix layout glitches.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,7 @@
 <header class="section header">
 
     <div class="header">
-        <h1><strong>&lt;/Gisto&gt;</strong></h1>
+        <h1><strong><a href="/">&lt;/Gisto&gt;</a></strong></h1>
     </div>
 
     <div class="w-container">
