--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,9 @@
 
     {% include ga.html%}
 
+    <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+    <script type="text/javascript">stLight.options({publisher: "6ccdc1be-66dc-486b-bd54-e41e194e96d5", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+
 </head>
 <body class="{% if page.name == 'home'%}home{% else %}inner{% endif %}">
 
