--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -60,9 +60,42 @@
             </div>
         </section>
 
+        <div class="social w-clearfix">
+
+            <a href="https://twitter.com/share" class="twitter-share-button" data-via="gistoapp" data-hashtags="gistoapp">Tweet</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+            <!-- Place this tag where you want the +1 button to render. -->
+            <div class="g-plusone" data-size="medium"></div>
+
+            <!-- Place this tag after the last +1 button tag. -->
+            <script type="text/javascript">
+                (function() {
+                    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+                    po.src = 'https://apis.google.com/js/platform.js';
+                    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+                })();
+            </script>
+
+            <iframe src="http://ghbtns.com/github-btn.html?user=gisto&repo=gisto&type=fork&count=true"
+                    allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
+
+            <iframe src="http://ghbtns.com/github-btn.html?user=gisto&repo=gisto&type=watch&count=true"
+                    allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
+
+            <div id="fb-root"></div>
+            <script>(function(d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) return;
+                js = d.createElement(s); js.id = id;
+                js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));</script>
+            <div class="fb-like" data-href="http://gistoapp.com" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
+
+        </div>
 
         <h1>Features</h1>
-
 
     </div>
 
