--- a/css/gisto.css
+++ b/css/gisto.css
@@ -4,7 +4,6 @@
   src: url("../font/Flexo-CapsDEMO-webfont.eot?#iefix") format("embedded-opentype"), url("../font/Flexo-CapsDEMO-webfont.woff") format("woff"), url("../font/Flexo-CapsDEMO-webfont.ttf") format("truetype"), url("../font/Flexo-CapsDEMO-webfont.svg#FertigoProRegular") format("svg");
   font-weight: normal;
   font-style: normal; }
-
 html {
   background: url("../images/sky2.jpg") no-repeat center center fixed #afbfd9;
   -webkit-background-size: cover;
@@ -426,6 +425,17 @@ a.top {
 
 .features-boxes {
   margin-top: 0; }
+
+.social {
+  text-align: center; }
+
+div .fb_reset {
+  display: inline; }
+
+.fb_iframe_widget {
+  display: inline-block;
+  position: relative;
+  top: -8px; }
 
 /* Mediaqueries */
 @media screen and (max-width: 479px) {
