Add open graph and twitter card data

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,18 @@
         <!--css3-mediaqueries-js - http://code.google.com/p/css3-mediaqueries-js/ - Enables media queries in some unsupported browsers-->
         <script type="text/javascript" src="/js/css3-mediaqueries.js"></script>
 
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:site" content="@gistoapp">
+        <meta name="twitter:creator" content="@gistoapp">
+        <meta name="twitter:title" content="Gisto - Manage your github gists on desktop">
+        <meta name="twitter:description" content="Cross-platform gist snippets management desktop application that allows you or your team share code snippets fast and easily #gistoapp">
+        <meta name="twitter:image" content="https://raw.githubusercontent.com/Gisto/Gisto/master/app/icon.png">
+        <meta property="og:title" content="Gisto - Manage your github gists on desktop">
+        <meta property="og:url" content="http://www.gistoapp.com"/>
+        <meta property="og:image" content="https://raw.githubusercontent.com/Gisto/Gisto/master/app/icon.png">
+        <meta property="og:site_name" content="Gistoapp">
+        <meta property="og:description" content="Cross-platform gist snippets management desktop application that allows you or your team share code snippets fast and easily #gistoapp">
+
         <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
         <script type="text/javascript">stLight.options({
             publisher: "0bfe80cf-ecdb-4f12-894e-e5804d926c50",
