Changed texts to be more clear, updated outdated information

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -6,9 +6,11 @@
         <div class="w-container">
             <div class="w-row">
                 <div class="w-col w-col-6 w-clearfix not-a-player">
-                    <p>Gisto is a Cross-platform gist snippets management desktop application that allows you and your
-                        team share code snippets fast and easily. Based on GitHub Gist Infrastructure which means you
-                        can use all your existing snippets by connecting your GitHub account!</p>
+                    <p>Gisto is a cross-platform gist snippets management desktop application that allows you
+                        to manage and share your gists easily.
+                        Gisto uses GitHub gists infrastructure which means all your existing gists
+                        are accessible from both Gisto and GitHub gists website.
+                    </p>
                     <a href="https://github.com/Gisto/Gisto" class="btn bg-grey txt-white"><i
                             class="icon-github"></i></a>
                     <a href="https://twitter.com/gistoapp" class="btn bg-grey twitter txt-white"><i
