--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -18,14 +18,14 @@
                     <a href="#about" class="btn bg-grey txt-white innsite">Read more <i
                             class="icon-arrow-right"></i></a>
                 </div>
-<!--
-<a class="w-col w-col-6 w-clearfix video-run">
+                <!--
+                <a class="w-col w-col-6 w-clearfix video-run">
 
-</a>
--->
+                </a>
+                -->
                 <div class="w-col w-col-6 w-clearfix video-run">
-                <img class="" src="../images/gisto.png" width="100%">
-                    <i class="icon-facetime-video"></i>
+                    <img class="" src="../images/gisto.png" width="100%">
+                    <i class="icon-play-circle"></i>
                 </div>
 
             </div>
@@ -64,18 +64,30 @@
 
         <div class="social w-clearfix">
 
-            <a href="https://twitter.com/share" class="twitter-share-button" data-via="gistoapp" data-hashtags="gistoapp">Tweet</a>
-            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+            <a href="https://twitter.com/share" class="twitter-share-button" data-via="gistoapp"
+               data-hashtags="gistoapp">Tweet</a>
+            <script>!function (d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
+                if (!d.getElementById(id)) {
+                    js = d.createElement(s);
+                    js.id = id;
+                    js.src = p + '://platform.twitter.com/widgets.js';
+                    fjs.parentNode.insertBefore(js, fjs);
+                }
+            }(document, 'script', 'twitter-wjs');</script>
 
             <!-- Place this tag where you want the +1 button to render. -->
             <div class="g-plusone" data-size="medium"></div>
 
             <!-- Place this tag after the last +1 button tag. -->
             <script type="text/javascript">
-                (function() {
-                    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+                (function () {
+                    var po = document.createElement('script');
+                    po.type = 'text/javascript';
+                    po.async = true;
                     po.src = 'https://apis.google.com/js/platform.js';
-                    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+                    var s = document.getElementsByTagName('script')[0];
+                    s.parentNode.insertBefore(po, s);
                 })();
             </script>
 
@@ -86,14 +98,16 @@
                     allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
 
             <div id="fb-root"></div>
-            <script>(function(d, s, id) {
+            <script>(function (d, s, id) {
                 var js, fjs = d.getElementsByTagName(s)[0];
                 if (d.getElementById(id)) return;
-                js = d.createElement(s); js.id = id;
+                js = d.createElement(s);
+                js.id = id;
                 js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
                 fjs.parentNode.insertBefore(js, fjs);
             }(document, 'script', 'facebook-jssdk'));</script>
-            <div class="fb-like" data-href="http://gistoapp.com" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
+            <div class="fb-like" data-href="http://gistoapp.com" data-layout="button_count" data-action="like"
+                 data-show-faces="false" data-share="true"></div>
 
         </div>
 
@@ -101,13 +115,27 @@
 
     </div>
 
-    <div class="hero-video">
+    <div class="hero-video w-clearfix">
         <a class="close-video"><i class="icon-remove"></i></a>
-        <video id="movie" preload>
+        <!--        <a class="next-video"><i class="icon-forward"></i></a>
+                <a class="prev-video"><i class="icon-backward"></i></a>-->
+        <!-- We will add video later, screenshots for now -->
+        <!--<video id="movie" preload>
             <source src="/video/gisto.webm" type="video/webm; codecs=vp8,vorbis" />
             <source src="/video/gisto.ogv" type="video/ogg; codecs=theora,vorbis" />
             <source src="/video/gisto.mp4" />
-        </video>
+        </video>-->
+        <div id="fader">
+            <img src="/images/screenshots/3-gist-view.png">
+            <img src="/images/screenshots/4-edit.png">
+            <img src="/images/screenshots/5-ace-plugins-emmet.png">
+            <img src="/images/screenshots/6-settings.png">
+            <img src="/images/screenshots/7-search.png">
+            <img src="/images/screenshots/8-browse-revisions.png">
+            <img src="/images/screenshots/9-add-comment.png">
+            <img src="/images/screenshots/10-view-comment.png">
+
+        </div>
     </div>
 
 </section>
