--- a/css/gisto.css
+++ b/css/gisto.css
@@ -175,17 +175,26 @@ nav {
     opacity: 1;
     box-shadow: 0px 0px 20px #000; }
 
-.close-video {
+.close-video, .next-video, .prev-video {
   position: absolute;
   top: 10px;
+  z-index: 999;
   right: 10px;
   font-size: 28px;
   color: #fff;
   background: tomato;
   padding: 5px 10px;
   opacity: 0.5; }
-  .close-video:hover {
+  .close-video:hover, .next-video:hover, .prev-video:hover {
     opacity: 1; }
+
+.next-video {
+  right: 62px;
+  background: skyblue; }
+
+.prev-video {
+  right: 118px;
+  background: skyblue; }
 
 header {
   background: #fff;
@@ -549,3 +558,14 @@ div .fb_reset {
     width: 50%;
     padding: 15px;
     border-radius: 10px; } }
+#fader {
+  position: relative;
+  width: 100%;
+  margin: 0 auto;
+  top: 0px; }
+  #fader img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    max-width: 100%;
+    height: auto; }
