--- a/css/gisto.css
+++ b/css/gisto.css
@@ -562,10 +562,11 @@ div .fb_reset {
   position: relative;
   width: 100%;
   margin: 0 auto;
-  top: 0px; }
+  top: 0px;
+  text-align: center; }
   #fader img {
-    position: absolute;
+    position: relative;
     top: 0;
-    left: 0;
+    text-align: center;
     max-width: 100%;
     height: auto; }
