--- a/css/gisto.scss
+++ b/css/gisto.scss
@@ -700,10 +700,12 @@ div .fb_reset {
   width: 100%;
   margin: 0 auto;
   top: 0px;
+  text-align: center;
   & img {
-    position: absolute;
+    position: relative;
     top: 0;
-    left: 0;
+    //left: 0;
+    text-align: center;
     max-width: 100%;
     height: auto;
   }
