--- a/css/gisto.css
+++ b/css/gisto.css
@@ -568,5 +568,5 @@ div .fb_reset {
     position: relative;
     top: 0;
     text-align: center;
-    max-width: 100%;
+    width: 100%;
     height: auto; }
