--- a/css/gisto.scss
+++ b/css/gisto.scss
@@ -706,7 +706,7 @@ div .fb_reset {
     top: 0;
     //left: 0;
     text-align: center;
-    max-width: 100%;
+    width: 100%;
     height: auto;
   }
 }
