--- a/css/gisto.css
+++ b/css/gisto.css
@@ -561,6 +561,7 @@ div .fb_reset {
 #fader {
   position: relative;
   width: 100%;
+  max-width: 1366px;
   margin: 0 auto;
   top: 0px;
   text-align: center; }
@@ -570,3 +571,24 @@ div .fb_reset {
     text-align: center;
     width: 100%;
     height: auto; }
+
+.page-docs h2,
+.page-faq h2 {
+  border-top: 1px dotted #ccc;
+  padding: 50px 0px 0px 0px; }
+  .page-docs h2:first-child,
+  .page-faq h2:first-child {
+    border-top: none;
+    padding: 0px 0px 0px 0px; }
+
+.home .box {
+  font-size: 0.9em; }
+
+blockquote {
+  margin: 0;
+  font-size: 15px;
+  font-style: italic;
+  color: tomato;
+  border-left: 5px solid tomato;
+  padding: 10px 0px 10px 10px;
+  background: #f2f2f2; }
