--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
     <meta name="twitter:description" content="Cross-platform gist snippets management desktop application that allows you and your team share code snippets fast and easily #gistoapp">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/Gisto/Gisto/master/app/icon.png">
     <meta property="og:title" content="Gisto - Manage your github gists on desktop">
-    <meta property="og:url" content="http://www.gistoapp.com"/>
+    <meta property="og:url" content="http://www.gistoapp.com">
     <meta property="og:image" content="https://raw.githubusercontent.com/Gisto/Gisto/master/app/icon.png">
     <meta property="og:site_name" content="Gistoapp">
     <meta property="og:description" content="Cross-platform gist snippets management desktop application that allows you and your team share code snippets fast and easily #gistoapp">
