Changed hero image

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -24,7 +24,7 @@
                 </a>
                 -->
                 <div class="w-col w-col-6 w-clearfix video-run">
-                    <img class="" src="../images/gisto.png" width="100%">
+                    <img class="" src="../images/theme.gif" width="100%">
                     <i class="icon-play-circle"></i>
                 </div>
 
