--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@ layout: default
 
 {% include head.html %}
 
-{% if page.name == 'home' %}
+{% if page.page_name == 'home' %}
     {% include hero.html %}
 {% endif %}
 
