UPDATE: add nightly builds info
- add nightly builds info

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -55,7 +55,7 @@
 
                         <h3>Download</h3>
                 <span>
-                    <i>Downloads, mirrors and prev. versions</i> <i class="icon-chevron-right"></i>
+                    <i>Downloads, mirrors, nightly builds and prev. versions</i> <i class="icon-chevron-right"></i>
                 </span>
                     </a>
                 </div>
