--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
         </div>
     </div>
 
-    <p class="txt-center">&copy; {{ site.year }} {{ site.name }}</p>
+    <p class="txt-center">&copy; {{ site.time | date: "%Y" }} {{ site.name }}</p>
 
 </footer>
 
