--- a/css/gisto.css
+++ b/css/gisto.css
@@ -57,7 +57,7 @@ p {
   font-weight: 700; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'flexo','Open Sans', sans-serif; }
+  font-family: 'flexo', 'Open Sans', sans-serif; }
 
 h1 {
   margin: 30px 0px;
@@ -128,7 +128,7 @@ nav {
   text-transform: uppercase;
   font-weight: 400; }
   .nav-link:hover {
-    text-shadow: 1px 1px 1px white, 0px 1px 3px tomato;
+    text-shadow: 1px 1px 1px #fff, 0px 1px 3px tomato;
     color: tomato; }
 
 .nav-link-download {
@@ -592,3 +592,14 @@ blockquote {
   border-left: 5px solid tomato;
   padding: 10px 0px 10px 10px;
   background: #f2f2f2; }
+
+.post h3 {
+  text-align: center; }
+.post img {
+  position: relative;
+  float: left;
+  margin: 5px 20px 20px 0;
+  border-radius: 3px;
+  box-shadow: 0px 4px 10px #555; }
+
+/*# sourceMappingURL=gisto.css.map */
