--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@ layout: post
 
             <a href="http://twitter.com/share?url={{site.url}}{{page.url}}&amp;text={{page.title}} @gistoapp" class="btn bg-grey twitter txt-white"><i class="icon-twitter"></i></a>
             <a href="http://www.facebook.com/sharer.php?u={{site.url}}{{page.url}}" class="btn bg-grey fb txt-white"><i class="icon-facebook"></i></a>
-            <a href="https://twitter.com/gistoapp" class="btn bg-grey gplus txt-white"><i class="icon-google-plus"></i></a>
+            <a href="https://plus.google.com/share?url={{site.url}}{{page.url}}" class="btn bg-grey gplus txt-white"><i class="icon-google-plus"></i></a>
             <a href="mailto:?Subject=Gisto: {{page.title}}&amp;Body={{page.title}} at {{site.url}}{{page.url}}" class="btn bg-grey txt-white"><i class="icon-envelope"></i></a>
 
         </div>
