UI: Fix download boxes UI
- fix download boxes layout as starting from upcoming v0.3.0 - six files
  instead of four will be offered for download.
- Update .gitignore

--- a/css/gisto.css
+++ b/css/gisto.css
@@ -364,8 +364,16 @@ ul {
 .download {
   padding: 20px;
   border: 1px solid #fff; }
-  .download h4 {
+  .download h4, .download h3 {
     text-align: center; }
+  .download a {
+    color: grey;
+    background: transparent;
+    padding: 5px 10px;
+    border-radius: 3px; }
+    .download a:hover {
+      color: #fff;
+      background: #555; }
   .download:hover {
     padding: 20px;
     border: 1px dashed #ccc;
