FIX(blog): mobile view

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: post
 
 
     <div class="w-container main content-container">
-        <div class="w-row">
+        <div class="w-row w-col">
             <h2>{{page.post_title}}</h2>
 
             <p>
