--- a/css/gisto.css
+++ b/css/gisto.css
@@ -596,10 +596,19 @@ blockquote {
 .post h3 {
   text-align: center; }
 .post img {
-  position: relative;
-  float: left;
-  margin: 5px 20px 20px 0;
   border-radius: 3px;
   box-shadow: 0px 4px 10px #555; }
+  .post img.alignleft {
+    float: left;
+    border-radius: 3px;
+    box-shadow: 0px 4px 10px #555;
+    margin: 5px 20px 20px 0px;
+    width: auto !important; }
+  .post img.alignright {
+    float: right;
+    border-radius: 3px;
+    box-shadow: 0px 4px 10px #555;
+    margin: 5px 0px 20px 20px;
+    width: auto !important; }
 
 /*# sourceMappingURL=gisto.css.map */
