--- a/css/gisto.scss
+++ b/css/gisto.scss
@@ -744,10 +744,21 @@ blockquote {
     text-align: center;
   }
   & img {
-    position: relative;
-    float: left;
-    margin: 5px 20px 20px 0;
     border-radius: 3px;
     box-shadow: 0px 4px 10px #555;
+    &.alignleft {
+      float: left;
+      border-radius: 3px;
+      box-shadow: 0px 4px 10px #555;
+      margin: 5px 20px 20px 0px;
+      width: auto !important;
+    }
+    &.alignright {
+      float: right;
+      border-radius: 3px;
+      box-shadow: 0px 4px 10px #555;
+      margin: 5px 0px 20px 20px;
+      width: auto !important;
+    }
   }
 }
